add `nsteps` support
